View Issue Details
ID | Project | Category | View Status | Date Submitted | Last Update |
---|---|---|---|---|---|
0029137 | Open CASCADE | OCCT:Visualization | public | 2017-09-25 15:09 | 2018-06-29 21:19 |
Reporter | kgv | Assigned To | bugmaster | ||
Priority | normal | Severity | major | ||
Status | closed | Resolution | fixed | ||
Platform | Windows | OS | VC++ 2015 | ||
Product Version | 7.2.0 | ||||
Target Version | 7.3.0 | Fixed in Version | 7.3.0 | ||
Summary | 0029137: Visualization - D3DHost_FrameBuffer does not release Depth texture and FBO index | ||||
Description | D3DHost_FrameBuffer does not set myIsOwnBuffer and myIsOwnDepth variables leading to OpenGL resource leak and debug assertion on destruction. | ||||
Steps To Reproduce | N/A | ||||
Tags | No tags attached. | ||||
Test case number | Not required | ||||
|
Branch CR29137 has been created by kgv. SHA-1: 6c8fd103f19e54c61cfbeffe1ac99b7c671e1743 Detailed log of new commits: Author: kgv Date: Mon Sep 25 15:21:11 2017 +0300 0029137: Visualization - D3DHost_FrameBuffer does not release Depth texture and FBO index |
|
Branch CR29137 has been updated forcibly by kgv. SHA-1: 66b87d51319be1ad69bb7452f61eb40c63761a6b |
|
Patch is ready for review (tested in scope of 0029138). |
|
Branch CR29137 reviewed without remarks, ready for testing. |
|
Tested in scope of 0029138 |
|
Branch CR29137 has been deleted by kgv. SHA-1: 66b87d51319be1ad69bb7452f61eb40c63761a6b |
Date Modified | Username | Field | Change |
---|---|---|---|
2017-09-25 15:09 | kgv | New Issue | |
2017-09-25 15:09 | kgv | Assigned To | => kgv |
2017-09-25 15:21 | git | Note Added: 0070822 | |
2017-09-25 15:25 | kgv | Relationship added | related to 0029138 |
2017-09-26 09:22 | git | Note Added: 0070840 | |
2017-09-26 12:19 | kgv | Note Added: 0070853 | |
2017-09-26 12:19 | kgv | Assigned To | kgv => san |
2017-09-26 12:19 | kgv | Status | new => resolved |
2017-10-02 19:57 | san | Note Added: 0071124 | |
2017-10-02 19:57 | san | Assigned To | san => bugmaster |
2017-10-02 19:57 | san | Status | resolved => reviewed |
2017-10-03 09:57 | bugmaster | Note Added: 0071140 | |
2017-10-03 09:57 | bugmaster | Status | reviewed => tested |
2017-10-03 18:28 | bugmaster | Test case number | => Not required |
2017-10-06 14:55 | bugmaster | Changeset attached | => occt master c98fcb64 |
2017-10-06 14:55 | bugmaster | Status | tested => verified |
2017-10-06 14:55 | bugmaster | Resolution | open => fixed |
2017-10-14 12:19 | git | Note Added: 0071461 | |
2018-06-29 21:15 |
|
Fixed in Version | => 7.3.0 |
2018-06-29 21:19 |
|
Status | verified => closed |