0029137: Visualization - D3DHost_FrameBuffer does not release Depth texture and FBO index